Minor report update

--- a/Final-Assignment/Report/main.tex
+++ b/Final-Assignment/Report/main.tex
@@ -685,6 +685,7 @@ We know that u(0) = 0, since we do not apply any actuation initially. Based on t
 
 Thus, we calculate the variance of $\epsilon(k)$ based on the values calculated from the above u(k) values and the $\phi_{sim}(k+1)$ values provided to us.
 
+We obtain approximately the same values as in Question 1, that is, a variance of $\sim$ 6.5 and a VAF of $\sim 70 \%$
 
 \subsubsection*{Question 2}
 
